<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.ghamry.justjava.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppings"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <CheckBox
                android:id="@+id/whippedCreamChk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whippedCream"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/chocolateChk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="+"
                    android:textAllCaps="true"
                    android:onClick="increment"/>

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:paddingHorizontal="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="-"
                    android:textAllCaps="true"
                    android:onClick="decrement"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0.00"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calculate"
                    android:textAllCaps="true"
                    android:layout_marginRight="4dp"
                    android:onClick="displayPrice"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:textAllCaps="true"
                    android:onClick="submitOrder"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
